@@ -22,7 +22,7 @@
   <parent>
     <groupId>dev.aherscu.qa</groupId>
     <artifactId>qa-automation</artifactId>
-    <version>0.0.35-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>qa-jgiven-reporter-maven-plugin</artifactId>
@@ -33,6 +33,11 @@
     Binds to Maven's verify phase to generate HTML/PDF reports from JGiven's
     JSON Report files.
   </description>
+
+  <properties>
+    <!-- FIXME: JGiven 1.3 changed structure of JSON report files -->
+    <skipTests>true</skipTests>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -79,7 +84,7 @@
     <dependency>
       <groupId>dev.aherscu.qa</groupId>
       <artifactId>qa-jgiven-reporter</artifactId>
-      <version>0.0.35-SNAPSHOT</version>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -95,7 +100,7 @@
       <artifactId>junit</artifactId>
       <!-- NOTE: this version matches the one used by
         maven-plugin-testing-harness above -->
-      <version>3.8.1</version>
+      <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -170,24 +175,6 @@
         meanwhile, disabling unit tests for these module when running on mac -->
         <maven.test.skip>true</maven.test.skip>
       </properties>
-    </profile>
-
-    <profile>
-      <id>platform-jdk11</id>
-      <activation>
-        <jdk>[11,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
   </profiles>
 </project>
